<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="br.com.infoterras.bindapplication.util.BuildUtil"/>

        <variable
            name="build"
            type="BuildUtil"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimaryDark"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:transitionName="image"
                android:layout_gravity="center"
                android:contentDescription="@null"
                android:src="@drawable/ic_github" />

            <ProgressBar
                android:id="@+id/progress"
                android:visibility="gone"
                android:indeterminateTint="@color/white"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="10pt">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <EditText
                    android:id="@+id/edt_search"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:hint="@string/edt_search_hint"
                    app:theme="@style/TextAppearanceColorTheme.EditText" />

                <ImageButton
                    android:id="@+id/btn_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5pt"
                    android:background="@drawable/shape_circular_button"
                    android:contentDescription="@null"
                    android:onClick="onClick"
                    android:padding="5dp"
                    android:src="@drawable/ic_search" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_version"
            android:text="@{String.format(@string/build_content, build.versionCode())}"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        
    </LinearLayout>

</layout>